[gd_scene load_steps=8 format=3 uid="uid://chg6qe1fijkh3"]

[ext_resource type="Script" path="res://levels/ui/soundtest.gd" id="1_3bg6p"]
[ext_resource type="VideoStream" path="res://backgounds/nebula_-_6044 (720p).ogv" id="2_abtft"]
[ext_resource type="Script" path="res://nebula.gd" id="3_c33nl"]
[ext_resource type="PackedScene" uid="uid://d31udhuuwrajn" path="res://levels/bottomhud.tscn" id="4_2a53a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtbgt"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4arqn"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wro6j"]
bg_color = Color(0, 0.8, 0, 1)

[node name="Soundtest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bg6p")

[node name="nebula" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 368.0
scale = Vector2(2, 1.96)
stream = ExtResource("2_abtft")
autoplay = true
script = ExtResource("3_c33nl")

[node name="Game name" type="Label" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 3.0
offset_right = 790.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 40
text = "Sound Test"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -129.5
offset_top = -362.0
offset_right = 129.5
grow_horizontal = 2
grow_vertical = 0

[node name="Music" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxFlat_wtbgt")
text = "Music"

[node name="Sfx" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxFlat_4arqn")
text = "Sound Effects"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxFlat_wro6j")
text = "Back"

[node name="Bottomhud" parent="." instance=ExtResource("4_2a53a")]
layout_mode = 1

[connection signal="finished" from="nebula" to="nebula" method="_on_finished"]
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="VBoxContainer/Sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
